<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello, Ubuntu</string><string name="goodbye">Server Address:</string>
    <string name="app_name">Ubuntu Remote Control</string>
    
    
    <string name="inline_preferences">In-line preferences</string>
    <string name="dialog_based_preferences">Server connection</string>
    
    
    <string name="title_toggle_preference">Toggle preference</string>
    <string name="summary_toggle_preference">This is a toggle button</string>
    
    
    <string name="title_edittext_preference">Server address</string>
    <string name="summary_edittext_preference">Set hostname or IP address</string>
    <string name="dialog_title_edittext_preference">Enter hostname or IP address</string>
    <string name="default_hostname_string">192.168.0.80</string>
    
    <string name="default_mac_address_string">90:e6:ba:5d:16:4e</string>
    <string name="dialog_title_mac_address_preference">Enter MAC address</string>

    
    <string name="title_editint_preference">Server port</string>
    <string name="summary_editint_preference">Set port</string>
    <string name="dialog_title_editint_preference">Enter port</string>
    <string name="default_port_number">46645</string>

    <string name="title_list_preference">Previously connected servers</string>
    <string name="summary_list_preference">An example that uses a list dialog</string>
    <string name="dialog_title_list_preference">Choose one</string>
    
	<string name="textflinger_button_title">Fling text</string>
	
	
	<string name="default_trigger_wifi_network">our_house</string>
	
    <string name="widget_loading">Loading...</string>
    <string name="widget_icon_title">Blank Monitor</string>
    
</resources>
