<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/inline_preferences">
            
        <CheckBoxPreference
                android:key="checkbox_preference"
                android:title="@string/title_toggle_preference"
                android:summary="@string/summary_toggle_preference" />
            
    </PreferenceCategory>
                
    <PreferenceCategory
            android:title="@string/dialog_based_preferences">

        <EditTextPreference
                android:key="hostname_preference"
                android:title="@string/title_edittext_preference"
                android:summary="@string/summary_edittext_preference"
                
                android:defaultValue="@string/default_hostname_string"
                android:dialogTitle="@string/dialog_title_edittext_preference" />
                
                
        <EditTextPreference
                android:key="port_preference"
                android:title="@string/title_editint_preference"
                android:summary="@string/summary_editint_preference"
                
                android:defaultValue="@string/default_port_number"
                android:dialogTitle="@string/dialog_title_editint_preference" />

        <EditTextPreference
                android:key="trigger_wifi_network"
                android:title="Wifi network trigger"
                android:summary="Wifi network to turn on lights upon connection"
                android:defaultValue="@string/default_trigger_wifi_network" />
                
        <Preference
                android:key="reset_arrival_lights"
                android:title="Clear Light Trigger"
                android:summary="Allow lights to be turned on again today"
                android:enabled="false"
                />

    </PreferenceCategory>

</PreferenceScreen>